--- a/Expressjs/views/index.ejs
+++ b/Expressjs/views/index.ejs
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ejs</title>
 </head>
 <body>
-    <h2>this is home page</h2>
+    <h1>hello sir : how can i help you ?<%=random%> </h1>
 </body>
 </html>
