--- a/Expressjs/views/home.ejs
+++ b/Expressjs/views/home.ejs
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h2>this is home page</h2>
+    <% for(let i of todos){ %>
+        <h4><%=i%></h4>
+    <%}%>
 </body>
 </html>
