--- a/restfulapi/views/edit.ejs
+++ b/restfulapi/views/edit.ejs
@@ -8,8 +8,9 @@
 <body>
     <fieldset>
         <legend>form</legend>
-        <form action="" method="">
-            <input type="text" value="<%= updateData.comment %>" />
+        <form action="/blog/<%=updateData.id%>?_method=PATCH" method="POST">
+            <input type="text" value="comment : <%= updateData.comment %>" name="comment"/>
+            <button type="submit">submit</button>
         </form>
     </fieldset>
 </body>
