--- a/restfulapi/views/index.ejs
+++ b/restfulapi/views/index.ejs
@@ -13,6 +13,10 @@
 		<p>Comment : <%= i.comment %></p>
         <a href="/blog/<%= i.id %>">Show</a>
 		<a href="/blog/<%= i.id %>/edit">Edit</a>
+		
+		<form action="/blog/<%=i.id%>?_method=DELETE" method="post">
+			<button>delete</button>
+		</form>
 
 		<% } %>
 	</body>
