--- a/restfulapi/views/show.ejs
+++ b/restfulapi/views/show.ejs
@@ -7,9 +7,9 @@
 	</head>
 	<body>
 		<% for(let item of SearchC){ %>
-		<h1><%= item.id %></h1>
-		<h2><%= item.userName %></h2>
-		<h4><%= item.comment %></h4>
+		<h1>ID : <%= item.id %></h1>
+		<h2> Name : <%= item.userName %></h2>
+		<h4> Comment : <%= item.comment %></h4>
 		<% }%>
 	</body>
 </html>
